<resources>
    <string name="app_name">Bulk Billing</string>

    <string name="dlg_ok_btn">OK</string>
    <string name="dlg_insert_error_title">Insert Error</string>
    <string name="dlg_insert_title">Insert Success</string>
    <string name="dlg_read_error_title">Read Error</string>
    <string name="dlg_insert_success">All records successfully inserted to MAST_OUT table&#8230;</string>
    <string name="dlg_read_error_msg">Error found while reading the data from MAST_CUST table&#8230; Please check it once again &amp; proceed&#8230;</string>
    <string name="dlg_insert_out_error_msg">Data did not inserted into MAST_OUT table&#8230; Please check it once again &amp; proceed&#8230;</string>
    <string name="dlg_insert_old_out_error_msg">Data did not inserted into MAST_OUT_OLD table&#8230; Please check it once again &amp; proceed&#8230;</string>
    <string name="dlg_insertion">Inserting Data</string>
    <string name="dlg_insertion_msg">Records are being calculating &amp; updating please wait&#8230;</string>
    <string name="dlg_progress_update">Getting Data</string>
    <string name="dlg_progress_msg_1">Checking file in server please wait&#8230;</string>
    <string name="dlg_progress_msg_2">Updating records please wait&#8230;</string>
    <string name="start_billing_txt">Start Billing</string>
    <string name="dlg_records_update_title">Records Update</string>
    <string name="dlg_records_update_msg">All records have been updated completely&#8230;</string>
    <string name="semi">:</string>
    <string name="to_bill">To Bill</string>
    <string name="bills_completed">Completed</string>
    <string name="total_records">Total Records</string>
    <string name="column_error_title">Column Error</string>
    <string name="column_error_msg">column not in the table&#8230; Please update it &amp; proceed&#8230;</string>
    <string name="bill_reports">Bill Reports</string>
    <string name="bill_report_details">Bill Report Details</string>
    <string name="no_records">Records</string>
    <string name="no_records_msg">No Records found to bill&#8230; Please update it &amp; proceed&#8230;</string>
    <string name="selected_mr">Selected MR\u0020</string>
    <string name="download_file_found">\u0020Download file found but still not yet uploaded file to server(FTP)&#8230; \n Please try later&#8230;</string>
    <string name="file_not_found">\u0020Download file not found on the selected date\u0020</string>
    <string name="delete_db_menu">Delete DB</string>
    <string name="assets_copy_success">Backup DB file generated successfully&#8230;</string>
    <string name="generate_db_btn">Generate DB</string>
    <string name="mr_login">MRCode</string>
    <string name="test_db_date">DB test date</string>
    <string name="db_data">Get DB Data</string>
    <string name="mr_file">MR File</string>
    <string name="mrcode_enter_valid">Enter MRCode</string>
    <string name="mrcode_valid">Enter Valid MRCode</string>
    <string name="billing_date_valid">Select date to get data</string>

    <string name="billing_report_name">NAME</string>
    <string name="billing_report_account_id">ACCOUNT ID</string>
    <string name="billing_report_rrno">RRNO</string>
    <string name="billing_report_pres_rdg">PRES RDG</string>
    <string name="billing_report_units">UNITS</string>
    <string name="billing_report_payable">PAYABLE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
